--- a/index.html
+++ b/index.html
@@ -305,6 +305,6 @@
             </div>
         </div>
 
-        <script type="module" src="./js/Controller.js"></script>
+        <script type="module" src="./js/controller.js"></script>
     </body>
 </html>
