--- a/index.html
+++ b/index.html
@@ -213,7 +213,7 @@
                         <div class="settings__inputs">
                             <div class="settings__item">
                                 <div class="settings__label-name">Имя</div>
-                                <input type="text" class="settings__input" placeholder="Введите имя" />
+                                <input type="text" class="settings__input" placeholder="Введите имя" data-input-settings-name />
                             </div>
                             <div class="settings__item">
                                 <div class="settings__label-name">Местоположение</div>
@@ -227,7 +227,7 @@
                                 <div class="item-theme">
                                     <div class="item-theme__label">
                                         <input
-                                            id="radio-1"
+                                            id="radio-1-light-theme"
                                             class="item-theme__radio-custom"
                                             name="radio-group"
                                             type="radio"
@@ -247,7 +247,12 @@
 
                                 <div class="item-theme">
                                     <div class="item-theme__label">
-                                        <input id="radio-1" class="item-theme__radio-custom" name="radio-group" type="radio" />
+                                        <input
+                                            id="radio-1-dark-theme"
+                                            class="item-theme__radio-custom"
+                                            name="radio-group"
+                                            type="radio"
+                                        />
                                         <label for="radio-1" class="item-theme__radio-custom-label">Темная</label>
                                     </div>
 
@@ -299,7 +304,7 @@
                             </div>
                         </div>
 
-                        <button class="settings__btn">Сохранить</button>
+                        <button class="settings__btn" data-save-settings>Сохранить</button>
                     </div>
                 </div>
             </div>
