--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                                     </div>
                                     <div class="header__gretting-text">
                                         Привет, <br />
-                                        <span class="header__gretting-text__blue" data-user-name>Александр!</span>
+                                        <span class="header__gretting-text__blue" data-user-name>Александр</span>
                                     </div>
                                     <div class="header__gear" id="header-open-settings" data-open-settings>
                                         <img src="./img/GearSix.svg" alt="" data-open-settings />
