added the ability to mark the completed task, it is also saved in localstorage

--- a/index.html
+++ b/index.html
@@ -149,7 +149,15 @@
                         <div class="page__tasks tasks">
                             <ul class="tasks__list" data-tasks>
                                 <!-- <li class="tasks__item item-task">
-                                    <div class="item-task__checkbox"></div>
+                                    <div class="item-task__checkbox">
+                                        <input
+                                            id="checkbox-5"
+                                            class="item-task__checkbox-input"
+                                            name="checkbox-5"
+                                            type="checkbox"
+                                        />
+                                        <label for="checkbox-5" class="item-task__checkbox-input-label"></label>
+                                    </div>
                                     <div class="item-task__content">
                                         <div class="item-task__name">Оформить курсовую работу</div>
                                         <div class="item-task__description">
@@ -298,8 +306,6 @@
                             <div class="settings__clear-description">Выберите задачи, которые вы хотите удалить</div>
                             <div class="settings__clear-checkbox-items">
                                 <div class="settings__clear-checkbox-item">
-                                    <!-- <div class="settings__checkbox-item-clear"></div>
-                                    <div class="settings__checkbox-label-item">Все</div> -->
                                     <input
                                         id="checkbox-1"
                                         class="settings__checkbox-custom"
@@ -310,20 +316,14 @@
                                     <label for="checkbox-1" class="settings__checkbox-custom-label">Все</label>
                                 </div>
                                 <div class="settings__clear-checkbox-item">
-                                    <!-- <div class="settings__checkbox-item-clear"></div>
-                                    <div class="settings__checkbox-label-item">Активные</div> -->
                                     <input id="checkbox-2" class="settings__checkbox-custom" name="checkbox-2" type="checkbox" />
                                     <label for="checkbox-2" class="settings__checkbox-custom-label">Активные</label>
                                 </div>
                                 <div class="settings__clear-checkbox-item">
-                                    <!-- <div class="settings__checkbox-item-clear"></div>
-                                    <div class="settings__checkbox-label-item">Выполненные</div> -->
                                     <input id="checkbox-3" class="settings__checkbox-custom" name="checkbox-3" type="checkbox" />
                                     <label for="checkbox-3" class="settings__checkbox-custom-label">Выполненные</label>
                                 </div>
                                 <div class="settings__clear-checkbox-item">
-                                    <!-- <div class="settings__checkbox-item-clear"></div>
-                                    <div class="settings__checkbox-label-item">Удаленные</div> -->
                                     <input id="checkbox-4" class="settings__checkbox-custom" name="checkbox-4" type="checkbox" />
                                     <label for="checkbox-4" class="settings__checkbox-custom-label">Удаленные</label>
                                 </div>
